Added the operation

--- a/_posts/api/webpage/method/2000-01-01-open.md
+++ b/_posts/api/webpage/method/2000-01-01-open.md
@@ -49,6 +49,7 @@ In this example, we've set the encoding to `UTF8`, and set the `Content-Type` he
 var webPage = require('webpage');
 var page = webPage.create();
 var settings = {
+  operation: "POST",
   encoding: "utf8",
   headers: {
     "Content-Type": "application/json"
