Example for title :books:

--- a/_posts/api/webpage/property/2000-01-01-title.md
+++ b/_posts/api/webpage/property/2000-01-01-title.md
@@ -10,7 +10,12 @@ permalink: api/webpage/property/title.html
 ```javascript
 var webPage = require('webpage');
 var page = webPage.create();
-// @TODO: Finish page.title example.
+
+page.open('http://phantomjs.org', function (status) {
+  var title = page.title;
+  console.log('Title: ' + page.title);
+  phantom.exit();
+});
 ```
 
 
