--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 Please see also http://phantomjs.org/releases.html.
 
+2014-10-18: Version 1.9.8
+
+      * Change default SSL protocol to TLSv1 to address POODLE (issue 12655)
+        To use the old default protocol of SSLv3 which is vulnerable to POODLE
+        add the --ssl-protocol=SSLv3 flag. Reference: http://poodlebleed.com/
+
 2014-01-25: Version 1.9.7
 
       * Reverted to GhostDriver 1.1.0 instead of 1.1.1 (issue 11915)
