Changes for 1.9.3 to 1.9.8.

--- a/_posts/release/2000-01-01-release-1.9.md
+++ b/_posts/release/2000-01-01-release-1.9.md
@@ -83,6 +83,27 @@ Of course, the URL matching can be more complicated than these simple examples.
 *   Fixed graphical artifacts with transparent background on Windows (issue [11276](https://github.com/ariya/phantomjs/issues/11276), [11007](https://github.com/ariya/phantomjs/issues/11007), [11366](https://github.com/ariya/phantomjs/issues/11366))
 *   Updated GhostDriver to version 1.0.4 (issue [11452](https://github.com/ariya/phantomjs/issues/11452))
 
+**Fixes in 1.9.3**
+
+* Fixed CoreText performance note on OS X 10.9 (issue 11418)
+* Fixed warning of obsolete userSpaceScaleFactor on OS X 10.9 (issue 11612)
+
+**Fixes in 1.9.6**
+
+* Updated GhostDriver to version 1.1.1 (issue 11877, 11893)
+
+**Fixes in 1.9.7**
+
+* Reverted to GhostDriver 1.1.0 instead of 1.1.1 (issue 11915)
+* Fixed another warning of obsolete userSpaceScaleFactor on OS X 10.9 (issue 11612)
+
+**Fixes in 1.9.8**
+
+* Change default SSL protocol to TLSv1 to address POODLE (issue 12655)
+* Fixed building on OS X 10.10 Yosemite (issue 12622)
+* Backported crash fix when exit (issue 11642, 12431)
+
+
 **Known Issues on Microsoft Windows**
 
 *   Very slow network performance. The workaround is to set [proxy type](https://github.com/ariya/phantomjs/wiki/API-Reference#wiki-command-line-options) to &quot;<tt>none</tt>&quot; (issue [10580](https://github.com/ariya/phantomjs/issues/10580))
