Links for all issues.

--- a/_posts/release/2000-01-01-release-1.9.md
+++ b/_posts/release/2000-01-01-release-1.9.md
@@ -85,23 +85,23 @@ Of course, the URL matching can be more complicated than these simple examples.
 
 **Fixes in 1.9.3**
 
-* Fixed CoreText performance note on OS X 10.9 (issue 11418)
-* Fixed warning of obsolete userSpaceScaleFactor on OS X 10.9 (issue 11612)
+* Fixed CoreText performance note on OS X 10.9 (issue [11418](https://github.com/ariya/phantomjs/issues/11418))
+* Fixed warning of obsolete userSpaceScaleFactor on OS X 10.9 (issue [11612](https://github.com/ariya/phantomjs/issues/11612))
 
 **Fixes in 1.9.6**
 
-* Updated GhostDriver to version 1.1.1 (issue 11877, 11893)
+* Updated GhostDriver to version 1.1.1 (issue [11877](https://github.com/ariya/phantomjs/issues/11877), [11893](https://github.com/ariya/phantomjs/issues/11892))
 
 **Fixes in 1.9.7**
 
-* Reverted to GhostDriver 1.1.0 instead of 1.1.1 (issue 11915)
-* Fixed another warning of obsolete userSpaceScaleFactor on OS X 10.9 (issue 11612)
+* Reverted to GhostDriver 1.1.0 instead of 1.1.1 (issue [11915](https://github.com/ariya/phantomjs/issues/11915))
+* Fixed another warning of obsolete userSpaceScaleFactor on OS X 10.9 (issue [11612](https://github.com/ariya/phantomjs/issues/11612))
 
 **Fixes in 1.9.8**
 
-* Change default SSL protocol to TLSv1 to address POODLE (issue 12655)
-* Fixed building on OS X 10.10 Yosemite (issue 12622)
-* Backported crash fix when exit (issue 11642, 12431)
+* Change default SSL protocol to TLSv1 to address POODLE (issue [12655](https://github.com/ariya/phantomjs/issues/12655))
+* Fixed building on OS X 10.10 Yosemite (issue [12622](https://github.com/ariya/phantomjs/issues/12622))
+* Backported crash fix when exit (issue [11642](https://github.com/ariya/phantomjs/issues/11642), [12431](https://github.com/ariya/phantomjs/issues/12431))
 
 
 **Known Issues on Microsoft Windows**
