--- a/_posts/api/webpage/property/2000-01-01-settings.md
+++ b/_posts/api/webpage/property/2000-01-01-settings.md
@@ -26,9 +26,7 @@ This property stores various settings of the web page:
 ```javascript
 var webPage = require('webpage');
 var page = webPage.create();
-// @TODO: Finish page.settings example.
-```
-
+page.settings.userAgent = 'Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/37.0.2062.120 Safari/537.36';
 
 
 
