add Webs entry to "Who's using PhantomJS?" page

--- a/_posts/documentation/explore/2000-01-06-users.md
+++ b/_posts/documentation/explore/2000-01-06-users.md
@@ -46,4 +46,5 @@ The following open-source projects are using PhantomJS as part of the testing wo
 * [Time Warner Cable](http://www.timewarnercable.com) uses PhantomJS with CoffeeScript + Jasmine for JavaScript build and JUnit XML for Jenkins continuous integration.
 * [Torbit](http://torbit.com) uses PhantomJS to analyze web pages in order to determine potential optimizations and various other tests.
 * [Twitter](http://twitter.com) uses using PhantomJS to run QUnit-based tests running within Jenkins CI (source: [tweet](https://twitter.com/leolaneseltd/status/197766152745787392) from Leo Lanese)
+* [Webs](http://www.webs.com/) uses PhantomJS to run automated tests.
 * [wtcss](http://css.benjaminbenben.com) uses PhantomJS to find where selectors match on a page
