Added Aha! as a PhantomJS user.

--- a/_posts/documentation/explore/2000-01-06-users.md
+++ b/_posts/documentation/explore/2000-01-06-users.md
@@ -22,6 +22,7 @@ The following open-source projects are using PhantomJS as part of the testing wo
 
 * [1minus1 Ltd](http://1minus1.com) uses PhantomJS to run Jasmine tests on TeamCity continuous integration server.
 * [A Spanish Life](http://aspanishlife.com) uses PhantomJS to generate advertisement images from user content.
+* [Aha!](http://www.aha.io) uses PhantomJS to generate PDF reports and PNG thumbnails from HTML.
 * [Apache Thrift](http://thrift.apache.org) uses PhantomJS combined with QUnit for the test suite.
 * [BandPage](http://www.bandpage.com) uses using PhantomJS inside a custom node file watcher thingy to run QUnit-based tests on every file save.
 * [Betfair](http://betfair.com) uses PhantomJS for JSUnit Testing Tool.
