Remove more CoffeeScript references (#12410).

--- a/_posts/documentation/explore/2000-01-01-examples.md
+++ b/_posts/documentation/explore/2000-01-01-examples.md
@@ -5,7 +5,7 @@ categories: docs docs-explore
 permalink: examples/index.html
 ---
 
-PhantomJS comes with a lot of [included examples](https://github.com/ariya/phantomjs/tree/master/examples). Often an example comes in two flavors: JavaScript and CoffeeScript.
+PhantomJS comes with a lot of [included examples](https://github.com/ariya/phantomjs/tree/master/examples).
 
 ## Basic examples
 
