Issue #12897: Download links for 2.0.0.

--- a/_posts/documentation/get-started/2000-01-01-download.md
+++ b/_posts/documentation/get-started/2000-01-01-download.md
@@ -12,7 +12,7 @@ Download service is kindly provided by [Bitbucket](https://bitbucket.org/ariya/p
 
 ## Windows
 
-Download [phantomjs-1.9.8-windows.zip](https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-1.9.8-windows.zip) (7.1 MB) and extract (unzip) the content.
+Download [phantomjs-2.0.0-windows.zip](https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.0.0-windows.zip) (19.4 MB) and extract (unzip) the content.
 
 The executable `phantomjs.exe` is ready to use.
 
@@ -20,38 +20,19 @@ The executable `phantomjs.exe` is ready to use.
 
 ## Mac OS X
 
-Download [phantomjs-1.9.8-macosx.zip](https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-1.9.8-macosx.zip) (9.0 MB) and extract (unzip) the content.
+Download [phantomjs-2.0.0-macosx.zip](https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.0.0-macosx.zip) (13.7 MB) and extract (unzip) the content.
 
 The binary `bin/phantomjs` is ready to use.
 
-**Note**: For this static build, the binary is self-contained with no external dependency. It will run on a fresh install of Snow Leopard or later versions. There is no requirement to install Qt or any other libraries.
-
-**Alternative** installation using Homebrew:
-
-<pre>brew update &amp;&amp; brew install phantomjs</pre>
-
-**Alternative** installation using MacPorts:
-
-<pre>sudo port selfupdate &amp;&amp; sudo port install phantomjs</pre>
+**Note**: For this static build, the binary is self-contained with no external dependency. It will run on a fresh install of OS X 10.7 (Lion) or later versions. There is no requirement to install Qt or any other libraries.
 
 ## Linux
 
-For 64-bit system, download [phantomjs-1.9.8-linux-x86_64.tar.bz2](https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-1.9.8-linux-x86_64.tar.bz2) (12.6 MB).
-
-For 32-bit system, download [phantomjs-1.9.8-linux-i686.tar.bz2](https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-1.9.8-linux-i686.tar.bz2) (12.9 MB).
-
-This package is built on CentOS 5.8. It should run successfully on Lucid or more modern systems (including other distributions). There is no requirement to install Qt, WebKit, or any other libraries. It is however expected that some base libraries necessary for rendering ([FreeType](http://www.freetype.org/), [Fontconfig](http://www.freedesktop.org/wiki/Software/fontconfig)) and the basic font files are available in the system.
-
-To install the dependencies on Red Hat based systems:
-<pre>sudo yum install fontconfig freetype libfreetype.so.6 libfontconfig.so.1 libstdc++.so.6</pre>
-
-Alternatively (for Unix-like systems), install the distribution-specific package using the native package manager (`apt-get` for Ubuntu and Debian, `pacman` for Arch Linux, `pkg_add` for OpenBSD, etc). **Warning**: The distribution-specific package may not always be on the latest stable version.
-
-For older systems, please compile PhantomJS from source (see below).
+Binary packages for Linux are still being prepared. Please come back again in a few days!
 
 ## Source Code
 
-Download [phantomjs-1.9.8-source.zip](https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-1.9.8-source.zip) (39.1 MB) and follow the [build instructions]({{ site.url }}/build.html).
+Download [phantomjs-2.0.0-source.zip](https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.0.0-source.zip) (105 MB) and follow the [build instructions]({{ site.url }}/build.html).
 
 ## Checksums
 
@@ -59,16 +40,12 @@ To verify the integrity of the downloaded files, use the following checksums.
 
 ### MD5 Checksums
 
-    814a438ca515c6f7b1b2259d0d5bc804 phantomjs-1.9.8-linux-i686.tar.bz2
-    4ea7aa79e45fbc487a63ef4788a18ef7 phantomjs-1.9.8-linux-x86_64.tar.bz2
-    fb850d56c033dd6e1142953904f62614 phantomjs-1.9.8-macosx.zip
-    f8163aef2230ebbda2d25a71a06ded7d phantomjs-1.9.8-source.zip
-    c5eed3aeb356ee597a457ab5b1bea870 phantomjs-1.9.8-windows.zip
+    80f06aa8215c52a7885313e23071db15 phantomjs-2.0.0-windows.zip
+    d970772f7d606578cd9c1999980999b2 phantomjs-2.0.0-macosx.zip
+    feabe9064100e241d21347739312e64d phantomjs-2.0.0-source.zip
 
 ### SHA-256 Checksums
 
-    4102450bb658157e9aef3e229828fade0aaa0de0663802b31a0edff4b5aedf85  phantomjs-1.9.8-linux-i686.tar.bz2
-    a1d9628118e270f26c4ddd1d7f3502a93b48ede334b8585d11c1c3ae7bc7163a  phantomjs-1.9.8-linux-x86_64.tar.bz2
-    8f15043ae3031815dc5f884ea6ffa053d365491b1bc0dc3a0862d5ff1ac20a48  phantomjs-1.9.8-macosx.zip
-    37e53b2907bf37d2b6a43f08d38bb4a15596bba337822179e647efd60c2261bf  phantomjs-1.9.8-source.zip
-    da36853ece7d58b6f50813d3e598d8a16bb191b467ac32e1624a239a49de9104  phantomjs-1.9.8-windows.zip
+    2be055448b225686e6474ad4886401b935648b4ae15bc39120c5dbfef4d95e56  phantomjs-2.0.0-windows.zip
+    9ae74da20e8831c4d48105004993fecee3e7e66f5d3381f879de366d82f9215c  phantomjs-2.0.0-macosx.zip
+    cc81249eaa059cc138414390cade9cb6509b9d6fa0df16f4f43de70b174b3bfe  phantomjs-2.0.0-source.zip
