--- a/_posts/documentation/get-started/2000-01-03-releases.md
+++ b/_posts/documentation/get-started/2000-01-03-releases.md
@@ -5,6 +5,8 @@ categories: docs docs-get-started
 permalink: releases.html
 ---
 
+[PhantomJS 2.0](release-2.0.html) was released on January 23, 2015. This is a major release since the core was switched to use Qt 5 to get a more modern base platform, as well as to have an updated WebKit module.
+
 [PhantomJS 1.9](release-1.9.html) "Sakura", was released on March 20, 2013. It came with an updated GhostDriver, an improved resource loading control, as well as other incremental improvements.
 
 [PhantomJS 1.8](release-1.8.html) "Blue Winter Rose", was released on December 21, 2012. It integrated GhostDriver, a remote WebDriver (Wire Protocol) implementation, and many related API addition.
