Download only the branch required
To save some data and an addition step of checking out the desired branch.

--- a/_posts/documentation/get-started/2000-01-02-build.md
+++ b/_posts/documentation/get-started/2000-01-02-build.md
@@ -12,9 +12,8 @@ permalink: build.html
 Install [Xcode](https://developer.apple.com/xcode/) and the necessary SDK for development (gcc, various tools, libraries, etc).
 
 ```bash
-git clone git://github.com/ariya/phantomjs.git
+git clone -b 2.0 --single-branch git://github.com/ariya/phantomjs.git
 cd phantomjs
-git checkout 2.0
 ./build.sh --qt-config "-I /usr/local/include/ -L /usr/local/lib/"
 ```
 
@@ -45,9 +44,8 @@ sudo yum -y install gcc gcc-c++ make flex bison gperf ruby \
 Then, launch the build:
 
 ```bash
-git clone git://github.com/ariya/phantomjs.git
+git clone -b 2.0 --single-branch git://github.com/ariya/phantomjs.git
 cd phantomjs
-git checkout 2.0
 ./build.sh
 ```
 
@@ -62,9 +60,8 @@ git checkout 2.0
 Use Visual Studio Command Prompt, run in the top directory. The results will go into `bin`:
 
 ```bash
-git clone git://github.com/ariya/phantomjs.git
+git clone -b 2.0 --single-branch git://github.com/ariya/phantomjs.git
 cd phantomjs
-git checkout 2.0
 build.cmd
 ```
 
