--- a/_posts/documentation/get-started/2000-01-01-download.md
+++ b/_posts/documentation/get-started/2000-01-01-download.md
@@ -28,7 +28,9 @@ The binary `bin/phantomjs` is ready to use.
 
 ## Linux
 
-Binary packages for Linux are still being prepared. Please come back again in a few days!
+Binary packages for Linux are still being prepared. There are still issues to be solved until a static build is available (see [issue 12948](https://github.com/ariya/phantomjs/issues/12948) for more details).
+
+In the mean time, it is recommended to build the Linux version from source.
 
 ## Source Code
 
