Update fs method documentation

--- a/_posts/api/fs/method/2000-01-01-exists.md
+++ b/_posts/api/fs/method/2000-01-01-exists.md
@@ -7,7 +7,7 @@ permalink: api/fs/method/exists.html
 
 'exists(string)' (BOOL)
 
-This will return true if the file exists, otherwise it will return false.
+This will return true if the file exists, otherwise it will return false. This follows symlinks to determinate if a file exists.
 
 ## Examples
 
@@ -27,11 +27,11 @@ var fs = require('fs');
 
 var path = '/Full/Path/To/test.txt';
 
-if (fs.exists(path)
+if (fs.exists(path))
   console.log('"'+path+'" exists.');
 else
   console.log('"'+path+'" doesn\'t exist.');
-  
+
 phantom.exit();
 ```
 
