--- a/_posts/api/fs/method/2000-01-01-remove.md
+++ b/_posts/api/fs/method/2000-01-01-remove.md
@@ -5,11 +5,21 @@ categories: api fs fs-method
 permalink: api/fs/method/remove.html
 ---
 
+'remove(string)'
+
+This will try to delete the specified file.
+
+When errors occur during a call, it will throw a 'Unable to remove file PATH' and hang execution.
+
 ## Examples
 
 ```javascript
 var fs = require('fs');
-// @TODO: Finish fs.remove example.
+var toDelete = 'someFile.txt';
+
+fs.removeDirectory(toDelete);
+
+phantom.exit();
 ```
 
 
