--- a/_posts/api/fs/method/2000-01-01-write.md
+++ b/_posts/api/fs/method/2000-01-01-write.md
@@ -5,8 +5,14 @@ categories: api fs fs-method
 permalink: api/fs/method/write.html
 ---
 
-@TODO: Finish fs.write parameter documentation.
+'write(string source, string content, string/Object parameters)'
 
+The parameter object can contain :
+
+ - mode: Open Mode. A string made of 'r', 'w', 'a/+', 'b' characters.
+ - charset : An IANA, case insensitive, charset name.
+
+ If the source file can't be openend then it will throw a 'Unable to open file SOURCE' and hang execution.
 
 ## Examples
 
