--- a/_posts/api/fs/method/2000-01-01-copy.md
+++ b/_posts/api/fs/method/2000-01-01-copy.md
@@ -5,15 +5,15 @@ categories: api fs fs-method
 permalink: api/fs/method/copy.html
 ---
 
-'copy(string,string)'
+'copy(string source, string destination)'
 
 This will try to copy a file from one path to another.
 
-Parameter 1 is the oragin file
-Parameter 2 is the destination and the file name
+Parameter 1 is the source file and parameter 2 is the destination path with the file name.
 
-If the file can't be found then it will throw a 'Unable to copy file \'{PARAMETER 2}\' at \'{PARAMETER 2}\'' and hang execution
-If the destination can not be created then it will throw a 'Unable to copy file \'{PARAMETER 2}\' at \'{PARAMETER 2}\'' and hang execution
+If the source file can't be found then it will throw a 'Unable to copy file SOURCE at DESTINATION' and hang execution.
+
+If the destination can not be created then it will throw a 'Unable to copy file SOURCE at DESTINATION' and hang execution. It will not overwrite existing files.
 
 ## Examples
 
