--- a/_posts/api/fs/method/2000-01-01-is-file.md
+++ b/_posts/api/fs/method/2000-01-01-is-file.md
@@ -4,7 +4,11 @@ title:  isFile
 categories: api fs fs-method
 permalink: api/fs/method/is-file.html
 ---
-Determines if the specified path is a file, returns a boolean true, if the path maps to a file.
+
+'isFile(string)' (BOOL)
+
+This will determine if the path is a file. It returns a boolean, true if the path is a file.
+
 ## Examples
 
 ```javascript
@@ -15,11 +19,13 @@ var list = fs.list(path);
 // Cycle through the list
 for(var x = 0; x < list.length; x++){
   // Note: If you didn't end path with a slash, you need to do so here.
-	var file = path + list[x]; 
-	if(fs.isDirectory(file)){
+	var file = path + list[x];
+	if(fs.isFile(file)){
 		// Do something
 	}
 }
+
+phantom.exit();
 ```
 
 
