--- a/_posts/api/fs/method/2000-01-01-is-link.md
+++ b/_posts/api/fs/method/2000-01-01-is-link.md
@@ -5,11 +5,24 @@ categories: api fs fs-method
 permalink: api/fs/method/is-link.html
 ---
 
+'isLink(string)' (BOOL)
+
+This will return true if the file path is a symlink (or a shortcut on Windows), otherwise it will return false.
+
+Be aware that Unix-like systems and Windows systems don't manage symlinks and shortcuts the same way.
+
 ## Examples
 
 ```javascript
 var fs = require('fs');
-// @TODO: Finish fs.isLink example.
+var path = '/Full/Path/To/file';
+
+if (fs.isLink(path))
+  console.log('"'+path+'" is a link.');
+else
+  console.log('"'+path+'" is an absolute path');
+
+phantom.exit();
 ```
 
 
