--- a/_posts/api/fs/method/2000-01-01-make-tree.md
+++ b/_posts/api/fs/method/2000-01-01-make-tree.md
@@ -5,11 +5,25 @@ categories: api fs fs-method
 permalink: api/fs/method/make-tree.html
 ---
 
+'makeTree(string)' (BOOL)
+
+Creates all necessary directories to be able to create the directory.
+
+This will returns true if the creation was successful, otherwise false. If the directory already exists, it will returns true.
+
 ## Examples
 
 ```javascript
 var fs = require('fs');
-// @TODO: Finish fs.makeTree example.
+
+var path = '/Full/Path/To/Test/';
+
+if(fs.makeDirectory(test))
+  console.log('"'+path+'" was created.');
+else
+  console.log('"'+path+'" is NOT created.');
+
+phantom.exit();
 ```
 
 
