--- a/_posts/api/fs/method/2000-01-01-read.md
+++ b/_posts/api/fs/method/2000-01-01-read.md
@@ -5,10 +5,18 @@ categories: api fs fs-method
 permalink: api/fs/method/read.html
 ---
 
-`read(path)` {string}
+'read(string path, string/Object parameters)' (string)
 
-Opens `path` and returns the entire contents as a string.
+The parameter object can contain :
 
+ - mode: Open Mode. A string made of 'r', 'w', 'a/+', 'b' characters.
+ - charset : An IANA, case insensitive, charset name.
+
+Opens the path and returns the entire contents as a string.
+
+When errors occur during a call, it will throw a 'Unable to open file PATH' and hang execution.
+
+Note that the behavior of this method is closely related to [fs.open]({{ site.url }}/api/fs/method/open.html).
 
 ## Examples
 
@@ -17,7 +25,8 @@ var fs = require('fs');
 
 var content = fs.read('file.txt');
 console.log('read data:', content);
-// @TODO: What happens with the character encoding?
+
+phantom.exit();
 ```
 
 
