Debian/Ubuntu build: always include build-essential.

--- a/_posts/documentation/get-started/2000-01-02-build.md
+++ b/_posts/documentation/get-started/2000-01-02-build.md
@@ -27,7 +27,7 @@ First, install the development packages of the following tools and libraries: GN
 On Debian-based distro (tested on Ubuntu 14.04), run:
 
 ```bash
-sudo apt-get install g++ flex bison gperf ruby perl \
+sudo apt-get install build-essential g++ flex bison gperf ruby perl \
   libsqlite3-dev libfontconfig1-dev libicu-dev libfreetype6 libssl-dev \
   libpng-dev libjpeg-dev
 ```
