--- a/_posts/documentation/get-started/2000-01-02-build.md
+++ b/_posts/documentation/get-started/2000-01-02-build.md
@@ -27,7 +27,7 @@ First, install the development packages of the following tools and libraries: GN
 On Debian-based distro (tested on Ubuntu 14.04), run:
 
 ```bash
-sudo apt-get install build-essential g++ flex bison gperf ruby perl \
+sudo apt-get install build-essential git g++ flex bison gperf ruby perl \
   libsqlite3-dev libfontconfig1-dev libicu-dev libfreetype6 libssl-dev \
   libpng-dev libjpeg-dev python
 ```
@@ -37,7 +37,7 @@ Note: It is recommend also to install `ttf-mscorefonts-installer` package.
 On Fedora-based distro (tested on CentOS 6), run:
 
 ```bash
-sudo yum -y install gcc gcc-c++ make flex bison gperf ruby \
+sudo yum -y install gcc gcc-c++ git make flex bison gperf ruby \
   openssl-devel freetype-devel fontconfig-devel libicu-devel sqlite-devel \
   libpng-devel libjpeg-devel
 ```
