More Linux dependencies
libX11-dev and libxext-dev also needed

--- a/_posts/documentation/get-started/2000-01-02-build.md
+++ b/_posts/documentation/get-started/2000-01-02-build.md
@@ -29,7 +29,7 @@ On Debian-based distro (tested on Ubuntu 14.04), run:
 ```bash
 sudo apt-get install build-essential g++ flex bison gperf ruby perl \
   libsqlite3-dev libfontconfig1-dev libicu-dev libfreetype6 libssl-dev \
-  libpng-dev libjpeg-dev python
+  libpng-dev libjpeg-dev python libX11-dev libxext-dev
 ```
 
 Note: It is recommend also to install `ttf-mscorefonts-installer` package.
