Explain where the output from the Linux build goes, just as for Windows

--- a/_posts/documentation/get-started/2000-01-02-build.md
+++ b/_posts/documentation/get-started/2000-01-02-build.md
@@ -53,6 +53,8 @@ git checkout 2.0
 
 **Note**: `build.sh` by default will launch parallel compile jobs depending on the available CPU cores, e.g. 4 jobs on a modern hyperthreaded dual-core processor. If necessary, e.g. when building on a virtual machine/server or other limited environment, reduce the jobs by passing a number, e.g `./build.sh --jobs 1` to set only one compile job at a time.
 
+This produces a build `bin/phantomjs`. This is an executable; it can be moved to a different directory (e.g. /usr/local/bin) or another machine.
+
 ## Windows
 
 **Note**: Supported toolchains: `MSVC2012` and `MSVC2013`.
