Add Material Design Icon Generator

--- a/_posts/documentation/explore/2000-01-06-users.md
+++ b/_posts/documentation/explore/2000-01-06-users.md
@@ -35,6 +35,7 @@ The following open-source projects are using PhantomJS as part of the testing wo
 * [KodeCRM](http://www.kodecrm.com) uses PhantomJS to run QUnit tests on commandline
 * [Leftronic](https://www.leftronic.com) uses PhantomJS to render dashboard screenshots for their users
 * [LinkedIn (Mobile)](http://linkedin.com) uses PhantomJS as the basis for performance tool (source: [presentation](http://www.slideshare.net/phegaro/linkedin-mobile-how-do-we-do-it), slide 22)
+* [Material Design Icon Generator](https://android.ferank.fr/page/generer-logo-material-design.php) uses PhantomJS to render icons
 * [Media Queries](http://mediaqueri.es) uses PhantomJS to capture screenshots of sites using media queries and responsive design (source, [tweet](https://twitter.com/mediaqueries/status/202650584887730177) from Media Queries).
 * [NodeCloud](http://www.nodecloud.org) uses PhantomJS to generate screenshot of selected web sites related to Node.js.
 * [Novus](http://www.novus.com) uses PhantomJS to power reporting functionality in the real-time financial analytics product.
