Build dependencies tested on Debian wheezy.

--- a/_posts/documentation/get-started/2000-01-02-build.md
+++ b/_posts/documentation/get-started/2000-01-02-build.md
@@ -24,7 +24,7 @@ This produces a statically built `bin/phantomjs`. This is a self-contained execu
 
 First, install the development packages of the following tools and libraries: GNU C++ compiler, bison, flex, gperf, Perl, Ruby, SQLite, FreeType, FontConfig, OpenSSL, and ICU. The actual package names may vary from one distribution to another.
 
-On Debian-based distro (tested on Ubuntu 14.04), run:
+On Debian-based distro (tested on Ubuntu 14.04 and Debian 7.0), run:
 
 ```bash
 sudo apt-get install build-essential g++ flex bison gperf ruby perl \
