--- a/_posts/documentation/get-started/2000-01-02-build.md
+++ b/_posts/documentation/get-started/2000-01-02-build.md
@@ -12,7 +12,7 @@ permalink: build.html
 Install [Xcode](https://developer.apple.com/xcode/) and the necessary SDK for development (gcc, various tools, libraries, etc).
 
 ```bash
-git clone git://github.com/ariya/phantomjs.git
+git clone https://github.com/ariya/phantomjs.git
 cd phantomjs
 git checkout 2.0
 ./build.sh --qt-config "-I /usr/local/include/ -L /usr/local/lib/"
@@ -45,7 +45,7 @@ sudo yum -y install gcc gcc-c++ make flex bison gperf ruby \
 Then, launch the build:
 
 ```bash
-git clone git://github.com/ariya/phantomjs.git
+git clone https://github.com/ariya/phantomjs.git
 cd phantomjs
 git checkout 2.0
 ./build.sh
@@ -64,7 +64,7 @@ This produces a build `bin/phantomjs`. This is an executable; it can be moved to
 Use Visual Studio Command Prompt, run in the top directory. The results will go into `bin`:
 
 ```bash
-git clone git://github.com/ariya/phantomjs.git
+git clone https://github.com/ariya/phantomjs.git
 cd phantomjs
 git checkout 2.0
 build.cmd
