Add a remainder about `console.log` inside `evaluate`
It's ridiculous to have this in the Quick Start page but not the API docs.

It just drove me mad, googled it, and found many people encountered the same frustration. :(

--- a/_posts/api/webpage/method/2000-01-01-evaluate.md
+++ b/_posts/api/webpage/method/2000-01-01-evaluate.md
@@ -52,8 +52,28 @@ page.open('http://m.bing.com', function(status) {
 
 **Closures, functions, DOM nodes, etc. will _not_ work!**
 
+Any console message from a web page, including from the code inside `evaluate`, will not be displayed by default. To override this behavior, use the `onConsoleMessage` callback. The first example can be rewritten to:
 
+### Get the page title from Bing.com and print it inside `evaluate`
 
+```javascript
+var webPage = require('webpage');
+var page = webPage.create();
+
+page.onConsoleMessage = function(msg) {
+  console.log(msg);
+}
+
+page.open('http://m.bing.com', function(status) {
+
+  var title = page.evaluate(function() {
+    console.log(document.title);
+  });
+  
+  phantom.exit();
+
+});
+```
 
 
 
