--- a/_posts/api/fs/method/2000-01-01-write.md
+++ b/_posts/api/fs/method/2000-01-01-write.md
@@ -12,7 +12,7 @@ The parameter object can contain :
  - mode: Open Mode. A string made of 'r', 'w', 'a/+', 'b' characters.
  - charset : An IANA, case insensitive, charset name.
 
- If the source file can't be openend then it will throw a 'Unable to open file SOURCE' and hang execution.
+ If the source file can't be opened then it will throw a 'Unable to open file SOURCE' and hang execution.
 
 ## Examples
 
