--- a/_posts/documentation/get-started/2000-01-01-download.md
+++ b/_posts/documentation/get-started/2000-01-01-download.md
@@ -50,4 +50,4 @@ To verify the integrity of the downloaded files, use the following checksums.
 
     0070da721d1ddeff4db0658ebe819b823de1e183b412e5d8e74cd8d9a34743fa  phantomjs-2.0.0-windows.zip
     9ae74da20e8831c4d48105004993fecee3e7e66f5d3381f879de366d82f9215c  phantomjs-2.0.0-macosx.zip
-    cc81249eaa059cc138414390cade9cb6509b9d6fa0df16f4f43de70b174b3bfe  phantomjs-2.0.0-source.zip
+    cc81249eaa059cc138414390cade9cb6509b9d6fa0df16f4f43de70b174b3bfe  phantomjs-2.0.0-source.zip12
