--- a/_posts/documentation/get-started/2000-01-01-download.md
+++ b/_posts/documentation/get-started/2000-01-01-download.md
@@ -24,6 +24,8 @@ Download [phantomjs-2.0.0-macosx.zip](https://bitbucket.org/ariya/phantomjs/down
 
 The binary `bin/phantomjs` is ready to use.
 
+**Note**: If running `bin/phantomjs` you get a `Killed: 9` error, you can try to unpack the binary with `upx -d bin/phantomjs` (you can install `upx` with [Homebrew](http://brew.sh/) using: `brew install upx`) 
+
 **Note**: For this static build, the binary is self-contained with no external dependency. It will run on a fresh install of OS X 10.7 (Lion) or later versions. There is no requirement to install Qt or any other libraries.
 
 ## Linux
