Update build instructions for OS X
Add note about OpenSSL.
OpenSSL was removed from XCode 7 and they have to be installed via 3rd party package manager.

--- a/_posts/documentation/get-started/2000-01-02-build.md
+++ b/_posts/documentation/get-started/2000-01-02-build.md
@@ -10,6 +10,7 @@ permalink: build.html
 ## Mac OS X
 
 Install [Xcode](https://developer.apple.com/xcode/) and the necessary SDK for development (gcc, various tools, libraries, etc).
+You also need to install OpenSSL via [Homebrew](http://brew.sh/) or via [MacPorts](https://www.macports.org/)
 
 ```bash
 git clone --recurse-submodules git://github.com/ariya/phantomjs.git
