Update Linux binary message in docs
Since no one is working on the issue (and no progress has been made for almost a year now), it is currently misleading.

--- a/_posts/documentation/get-started/2000-01-01-download.md
+++ b/_posts/documentation/get-started/2000-01-01-download.md
@@ -28,9 +28,9 @@ The binary `bin/phantomjs` is ready to use.
 
 ## Linux
 
-Binary packages for Linux are still being prepared. There are still issues to be solved until a static build is available (see [issue 12948](https://github.com/ariya/phantomjs/issues/12948) for more details).
+Binary packages for Linux are not available. There are still issues to be solved until a static build is available (see [issue 12948](https://github.com/ariya/phantomjs/issues/12948) for more details).
 
-In the mean time, it is recommended that you build the Linux version from source.
+In the meantime, it is recommended to build the Linux version from source.
 
 ## Source Code
 
