Added note to setEncoding for sending back Buffers

--- a/_posts/api/webserver/method/2000-01-01-listen.md
+++ b/_posts/api/webserver/method/2000-01-01-listen.md
@@ -24,7 +24,7 @@ The `response` object should be used to create the response using the following 
 * `setHeader(name, value)`: sets a specific header
 * `header(name)`: returns the value of the given header
 * `statusCode`: Sets the returned HTTP status code.
-* `setEncoding(encoding)`: Indicate the encoding to use to convert data given to `write()`. By default data will be converted to UTF-8. Indicate `"binary"` if data is a binary string.
+* `setEncoding(encoding)`: Indicate the encoding to use to convert data given to `write()`. By default data will be converted to UTF-8. Indicate `"binary"` if data is a binary string. Not required if data is a Buffer (e.g. from page.renderBuffer).
 * `write(data)`: Sends a chunk for the response body. Can be called multiple times.
 * `writeHead(statusCode, headers)`: Sends a response header to the request. The status code is a 3-digit HTTP status code (e.g. `404`). The last argument, headers, are the response headers. Optionally one can give a human-readable `headers` collection as the second argument.
 * `close()`: Closes the HTTP connection.
