Add PhantomJS install for FreeBSD

--- a/_posts/documentation/get-started/2000-01-01-download.md
+++ b/_posts/documentation/get-started/2000-01-01-download.md
@@ -32,6 +32,14 @@ Binary packages for Linux are still being prepared. There are still issues to be
 
 In the mean time, it is recommended that you build the Linux version from source.
 
+## FreeBSD
+
+Binary packages are available via pkg:
+
+`$ sudo pkg install phantomjs`
+
+You can also build PhantomJS yourself from the FreeBSD Ports Collection: [https://svnweb.freebsd.org/ports/head/lang/phantomjs/](https://svnweb.freebsd.org/ports/head/lang/phantomjs/)
+
 ## Source Code
 
 Download [phantomjs-2.0.0-source.zip](https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.0.0-source.zip) (105 MB) and follow the [build instructions]({{ site.url }}/build.html).
