--- a/_posts/documentation/get-started/2000-01-01-download.md
+++ b/_posts/documentation/get-started/2000-01-01-download.md
@@ -22,9 +22,9 @@ The executable `phantomjs.exe` is ready to use.
 
 Download [phantomjs-2.0.0-macosx.zip](https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.0.0-macosx.zip) (13.7 MB) and extract (unzip) the content.
 
-The binary `bin/phantomjs` is compressed with [upx](http://upx.sourceforge.net/) (available in homebrew). Decompress the binary with `upx -d bin/phantomjs`. The binary `bin/phantomjs` is now ready to use.
-
 **Note**: For this static build, the binary is self-contained with no external dependency. It will run on a fresh install of OS X 10.7 (Lion) or later versions. There is no requirement to install Qt or any other libraries.
+
+**Known Issue**: If launching the executable fails with the error `Killed: 9`, please decompress the binary first with [upx](http://upx.sourceforge.net/): `upx -d bin/phantomjs`.
 
 ## Linux
 
