--- a/_posts/documentation/get-started/2000-01-01-download.md
+++ b/_posts/documentation/get-started/2000-01-01-download.md
@@ -5,14 +5,11 @@ categories: docs docs-get-started
 permalink: download.html
 ---
 
-**Note** Binary packages are made available on a volunteer basis. There is no need to
-ask when a binary package for a given platform will be ready. The packagers are fully aware of every source release and they give their best effort to make the binaries available.
-
-Download service is kindly provided by [Bitbucket](https://bitbucket.org/ariya/phantomjs/downloads). Previous releases download was provided by [Google Code Project Hosting](http://code.google.com/p/phantomjs/downloads/).
+**Note** There is no need to ask when a binary package for a given platform will be ready. The packagers are fully aware of every release and they give their best effort to make the binaries available.
 
 ## Windows
 
-Download [phantomjs-2.0.0-windows.zip](https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.0.0-windows.zip) (19.4 MB) and extract (unzip) the content.
+Download [phantomjs-2.1.1-windows.zip](https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-windows.zip) (17.4 MB) and extract (unzip) the content.
 
 The executable `phantomjs.exe` is ready to use.
 
@@ -20,17 +17,21 @@ The executable `phantomjs.exe` is ready to use.
 
 ## Mac OS X
 
-Download [phantomjs-2.0.0-macosx.zip](https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.0.0-macosx.zip) (13.7 MB) and extract (unzip) the content.
+Download [phantomjs-2.1.1-macosx.zip](https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-macosx.zip) (16.4 MB) and extract (unzip) the content.
 
 **Note**: For this static build, the binary is self-contained with no external dependency. It will run on a fresh install of OS X 10.7 (Lion) or later versions. There is no requirement to install Qt or any other libraries.
 
-**Known Issue**: If launching the executable fails with the error `Killed: 9`, please decompress the binary first with [upx](http://upx.sourceforge.net/): `upx -d bin/phantomjs`.
+## Linux 64-bit
 
-## Linux
+Download [phantomjs-2.1.1-linux-x86_64.tar.bz2](https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2) (22.3 MB) and extract the content.
 
-Binary packages for Linux are still being prepared. There are still issues to be solved until a static build is available (see [issue 12948](https://github.com/ariya/phantomjs/issues/12948) for more details).
+**Note**: For this static build, the binary is self-contained. . There is no requirement to install Qt, WebKit, or any other libraries. It however still relies on [Fontconfig](http://www.freedesktop.org/wiki/Software/fontconfig/) (the package `fontconfig` or `libfontconfig`, depending on the distribution).
 
-In the mean time, it is recommended that you build the Linux version from source.
+## Linux 32-bit
+
+Download [phantomjs-2.1.1-linux-i686.tar.bz2](https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-i686.tar.bz2) (23.0 MB) and extract the content.
+
+**Note**: For this static build, the binary is self-contained. . There is no requirement to install Qt, WebKit, or any other libraries. It however still relies on [Fontconfig](http://www.freedesktop.org/wiki/Software/fontconfig/) (the package `fontconfig` or `libfontconfig`, depending on the distribution).
 
 ## FreeBSD
 
@@ -42,7 +43,7 @@ You can also build PhantomJS yourself from the FreeBSD Ports Collection: [https:
 
 ## Source Code
 
-Download [phantomjs-2.0.0-source.zip](https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.0.0-source.zip) (105 MB) and follow the [build instructions]({{ site.url }}/build.html).
+Check the official git repository [github.com/ariya/phantomjs](https://github.com/ariya/phantomjs/).
 
 ## Checksums
 
@@ -50,12 +51,18 @@ To verify the integrity of the downloaded files, use the following checksums.
 
 ### MD5 Checksums
 
-    684c7706e3b14f7e0c3b9680f7c0cbe2 phantomjs-2.0.0-windows.zip
-    d970772f7d606578cd9c1999980999b2 phantomjs-2.0.0-macosx.zip
-    feabe9064100e241d21347739312e64d phantomjs-2.0.0-source.zip
+    0396e8249e082f72c1e39d33fc9d8de6 phantomjs-2.1.1-linux-i686.tar.bz2
+    1c947d57fce2f21ce0b43fe2ed7cd361 phantomjs-2.1.1-linux-x86_64.tar.bz2
+    b0c038bd139b9ecaad8fd321070c1651 phantomjs-2.1.1-macosx.zip
+    4104470d43ddf2a195e8869deef0aa69 phantomjs-2.1.1-windows.zip
 
 ### SHA-256 Checksums
 
-    0070da721d1ddeff4db0658ebe819b823de1e183b412e5d8e74cd8d9a34743fa  phantomjs-2.0.0-windows.zip
-    9ae74da20e8831c4d48105004993fecee3e7e66f5d3381f879de366d82f9215c  phantomjs-2.0.0-macosx.zip
-    cc81249eaa059cc138414390cade9cb6509b9d6fa0df16f4f43de70b174b3bfe  phantomjs-2.0.0-source.zip
+    80e03cfeb22cc4dfe4e73b68ab81c9fdd7c78968cfd5358e6af33960464f15e3  phantomjs-2.1.1-linux-i686.tar.bz2
+    86dd9a4bf4aee45f1a84c9f61cf1947c1d6dce9b9e8d2a907105da7852460d2f  phantomjs-2.1.1-linux-x86_64.tar.bz2
+    538cf488219ab27e309eafc629e2bcee9976990fe90b1ec334f541779150f8c1  phantomjs-2.1.1-macosx.zip
+    d9fb05623d6b26d3654d008eab3adafd1f6350433dfd16138c46161f42c7dcc8  phantomjs-2.1.1-windows.zip
+
+## Acknowledgement
+
+Download service is kindly provided by [Bitbucket](https://bitbucket.org/ariya/phantomjs/downloads). Previous releases download was provided by [Google Code Project Hosting](http://code.google.com/p/phantomjs/downloads/).
