Update the build instructions for 2.1 (issue #12970

--- a/_posts/documentation/get-started/2000-01-02-build.md
+++ b/_posts/documentation/get-started/2000-01-02-build.md
@@ -5,28 +5,21 @@ categories: docs docs-get-started
 permalink: build.html
 ---
 
-**Warning**: Compiling PhantomJS from source takes a long time, mainly due to thousands of files in the WebKit module. With 4 parallel compile jobs on a modern machine, the entire process takes roughly 30 minutes. It is highly recommended to download and install the ready-made [binary package]({{ site.url }}/download.html) if it is available.
+Unless it is absolutely necessary to build PhantomJS from source, it is highly recommended to download and install the ready-made [binary package]({{ site.url }}/download.html) instead.
 
-**System Requirements**: Approximately 4 GB of RAM and 3 GB of disk is required for the compilation process.
+## Requirements
 
-**Note**: If the compilation process is interrupted, once started again the `build.py` script will continue where left off.
+### Hardware requirements
 
-## Mac OS X
+* RAM: at least 4 GB
+* Disk space: at least 3 GB
+* CPU: 1.8 GHz, 4 cores or more
 
-Install [Xcode](https://developer.apple.com/xcode/) and the necessary SDK for development (gcc, various tools, libraries, etc).
-You also need to install OpenSSL via [Homebrew](http://brew.sh/) or via [MacPorts](https://www.macports.org/)
+PhantomJS is still a web browser, albeit headless. Thus, building it from source takes a long time (mainly due to thousands of files in the WebKit module). Estimated build time for a 4-core system is 30 minutes. 
 
-```bash
-git clone --recurse-submodules git://github.com/ariya/phantomjs.git
-cd phantomjs
-./build.py --qt-config "-I /usr/local/include/ -L /usr/local/lib/"
-```
+### Linux requirements
 
-This produces a statically built `bin/phantomjs`. This is a self-contained executable, it can be moved to a different directory or another machine.
-
-## Linux
-
-First, install the development packages of the following tools and libraries: GNU C++ compiler, bison, flex, gperf, Perl, Ruby, SQLite, FreeType, FontConfig, OpenSSL, and ICU. The actual package names may vary from one distribution to another.
+First, install the development packages of the following tools and libraries: GNU C++ compiler, bison, flex, gperf, Perl, Ruby, SQLite, FreeType, Fontconfig, OpenSSL, and ICU. The actual package names may vary from one distribution to another.
 
 On Debian-based distro (tested on Ubuntu 14.04 and Debian 7.0), run:
 
@@ -46,32 +39,44 @@ sudo yum -y install gcc gcc-c++ make flex bison gperf ruby \
   libpng-devel libjpeg-devel
 ```
 
-Then, launch the build:
+### Windows requirements
+
+Supported toolchains: `MSVC2012` and `MSVC2013`.
+
+You must have Perl, Python, Ruby, and Git on PATH. Also, note that Git comes with it's own version of `perl.exe`. If you have both Git and a separate perl installation in your PATH, please make sure that you separate Perl install's `bin` folder comes before the git's `bin` folder in your PATH.
+
+Run the build script from Visual Studio Command Prompt.
+
+**Tip**: Enabling incremental linking will make the linkage process faster.
+
+### OS X requirements
+
+* [Xcode](https://developer.apple.com/xcode/) and the necessary SDK for development (gcc, various tools, libraries, etc)
+* OpenSSL via [Homebrew](http://brew.sh/) or via [MacPorts](https://www.macports.org/)
+
+### FreeBSD requirements
+
+Build PhantomJS from the FreeBSD Ports Collection: [svnweb.freebsd.org/ports/head/lang/phantomjs/](https://svnweb.freebsd.org/ports/head/lang/phantomjs/)
+
+## Getting the Code
+
+To obtain the code using [Git](http://git-scm.com/) from the official repository [github.com/ariya/phantomjs](https://github.com/ariya/phantomjs/):
 
 ```bash
-git clone --recurse-submodules git://github.com/ariya/phantomjs.git
+git clone git://github.com/ariya/phantomjs.git
 cd phantomjs
-./build.py
+git checkout 2.1.1
+git submodule init
+git submodule update
 ```
+## Compile and Link
 
-**Note**: `build.py` by default will launch parallel compile jobs depending on the available CPU cores, e.g. 4 jobs on a modern hyperthreaded dual-core processor. If necessary, e.g. when building on a virtual machine/server or other limited environment, reduce the jobs by passing a number, e.g `./build.py --jobs 1` to set only one compile job at a time.
-
-This produces a build `bin/phantomjs`. This is an executable; it can be moved to a different directory (e.g. /usr/local/bin) or another machine.
-
-## Windows
-
-**Note**: Supported toolchains: `MSVC2012` and `MSVC2013`.
-
-**Note**: You must have Perl, Python, Ruby, and Git on PATH. Also, note that Git comes with it's own version of perl.exe. If you have both Git and a separate perl installation in your PATH, please make sure that you separate perl install bin folder comes before the git bin folder in your PATH variable.
-
-Use Visual Studio Command Prompt, run in the top directory. The results will go into `bin`:
+From the code checkout:
 
 ```bash
-git clone --recurse-submodules git://github.com/ariya/phantomjs.git
-cd phantomjs
-build.py
+python build.py
 ```
 
-**Note**: Enabling incremental linking will make the linkage process faster.
+This will take some time. Once it is completed, the executable will be available under the `bin` subdirectory.
 
-This produces a static build `bin/phantomjs.exe`. This is a self-contained executable, it can be moved to a different directory or another machine.
+**Tip**: If the compilation process is interrupted, once started again the `build.py` script will continue where left off.
