--- a/_posts/documentation/get-started/2000-01-05-repl.md
+++ b/_posts/documentation/get-started/2000-01-05-repl.md
@@ -17,7 +17,7 @@ So, that's where the idea of the REPL came from.
 
 ### How does it work
 
-As mentioned above, REPL stands for READ-EVAL-PRINT LOOP: every line you type (READ) (i.e. type than click ⏎) is sent to the interpreter for immediate interpretation (EVAL) and provide feedback feedback (PRINT).
+As mentioned above, REPL stands for READ-EVAL-PRINT LOOP: every line you type (READ) (i.e. type than click ⏎) is sent to the interpreter for immediate interpretation (EVAL) and provide feedback (PRINT).
 
 This is (from version 1.5 onward) the new default mode in which PhantomJS starts if you don't provide any parameter.
 
