--- a/_posts/api/stream/method/2000-01-01-write.md
+++ b/_posts/api/stream/method/2000-01-01-write.md
@@ -13,8 +13,16 @@ Stream objects are returned from the [fs.open]({{ site.url }}/api/fs/method/open
 
 ```javascript
 var fs = require('fs');
-var stream = fs.open('data.xml', 'r');
-// @TODO: Finish stream.write example.
+var stream = fs.open('output.txt', 'w');
+
+stream.write('Hello, ');
+stream.write('world!\n');
+stream.close();
+
+stream = fs.open('output.txt', 'r');
+console.log(stream.readLine());
+stream.close();
+phantom.exit();
 ```
 
 
