--- a/_posts/documentation/explore/2000-01-06-users.md
+++ b/_posts/documentation/explore/2000-01-06-users.md
@@ -24,8 +24,9 @@ The following open-source projects are using PhantomJS as part of the testing wo
 * [A Spanish Life](http://aspanishlife.com) uses PhantomJS to generate advertisement images from user content.
 * [Aha!](http://www.aha.io) uses PhantomJS to generate PDF reports and PNG thumbnails from HTML.
 * [Apache Thrift](http://thrift.apache.org) uses PhantomJS combined with QUnit for the test suite.
+* [Apifier](https://www.apifier.com) uses PhantomJS to run their hosted web crawler for developers.
 * [Arachni Web Application Security Scanner](http://www.arachni-scanner.com/) uses PhantomJS to test the security of rich web applications.
-* [BandPage](http://www.bandpage.com) uses using PhantomJS inside a custom node file watcher thingy to run QUnit-based tests on every file save.
+* [BandPage](http://www.bandpage.com) uses PhantomJS inside a custom node file watcher thingy to run QUnit-based tests on every file save.
 * [Betfair](http://betfair.com) uses PhantomJS for JSUnit Testing Tool.
 * [Business-Clicks](http://www.business-clicks.de) uses PhantomJS to periodically visit complex websites with configurators, collect monitoring data and capture screenshots. Exemplary result can be seen in a [comparison of online printing services](http://www.business-clicks.de/preisvergleich-druckprodukte).
 * [CircuitLab](http://circuitlab.com) uses PhantomJS to render electronic schematic into professional-quality images and PDF (source: [blog post](https://www.circuitlab.com/blog/2012/06/20/rendering-16_000-schematics-in-the-cloud-with-rabbitmq-and/))
