Linux installation: specify minimum version for GLIBCXX and GLIBC
Closes #13940

--- a/_posts/documentation/get-started/2000-01-01-download.md
+++ b/_posts/documentation/get-started/2000-01-01-download.md
@@ -25,13 +25,13 @@ Download [phantomjs-2.1.1-macosx.zip](https://bitbucket.org/ariya/phantomjs/down
 
 Download [phantomjs-2.1.1-linux-x86_64.tar.bz2](https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2) (22.3 MB) and extract the content.
 
-**Note**: For this static build, the binary is self-contained. . There is no requirement to install Qt, WebKit, or any other libraries. It however still relies on [Fontconfig](http://www.freedesktop.org/wiki/Software/fontconfig/) (the package `fontconfig` or `libfontconfig`, depending on the distribution).
+**Note**: For this static build, the binary is self-contained. There is no requirement to install Qt, WebKit, or any other libraries. It however still relies on [Fontconfig](http://www.freedesktop.org/wiki/Software/fontconfig/) (the package `fontconfig` or `libfontconfig`, depending on the distribution). The system must have GLIBCXX_3.4.9 and GLIBC_2.7.
 
 ## Linux 32-bit
 
 Download [phantomjs-2.1.1-linux-i686.tar.bz2](https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-i686.tar.bz2) (23.0 MB) and extract the content.
 
-**Note**: For this static build, the binary is self-contained. . There is no requirement to install Qt, WebKit, or any other libraries. It however still relies on [Fontconfig](http://www.freedesktop.org/wiki/Software/fontconfig/) (the package `fontconfig` or `libfontconfig`, depending on the distribution).
+**Note**: For this static build, the binary is self-contained. There is no requirement to install Qt, WebKit, or any other libraries. It however still relies on [Fontconfig](http://www.freedesktop.org/wiki/Software/fontconfig/) (the package `fontconfig` or `libfontconfig`, depending on the distribution). The system must have GLIBCXX_3.4.9 and GLIBC_2.7.
 
 ## FreeBSD
 
