--- a/_posts/documentation/get-started/2000-01-02-build.md
+++ b/_posts/documentation/get-started/2000-01-02-build.md
@@ -45,6 +45,8 @@ Supported toolchains: `MSVC2012` and `MSVC2013`.
 
 You must have Perl, Python, Ruby, and Git on PATH. Also, note that Git comes with it's own version of `perl.exe`. If you have both Git and a separate perl installation in your PATH, please make sure that you separate Perl install's `bin` folder comes before the git's `bin` folder in your PATH.
 
+Please also add the folder <phantomjs_path>\src\qt\3rdparty\gnuwin32\bin to your PATH, as required tools such as bison, flex, and gperf will not be found otherwise. Ex: ```SET PATH=%CD%\src\qt\3rdparty\gnuwin32\bin;%PATH%```
+
 Run the build script from Visual Studio Command Prompt.
 
 **Tip**: Enabling incremental linking will make the linkage process faster.
