Fix wrong markup on build.html

--- a/_posts/documentation/get-started/2000-01-02-build.md
+++ b/_posts/documentation/get-started/2000-01-02-build.md
@@ -43,9 +43,14 @@ sudo yum -y install gcc gcc-c++ make flex bison gperf ruby \
 
 Supported toolchains: `MSVC2012` and `MSVC2013`.
 
-You must have Perl, Python, Ruby, and Git on PATH. Also, note that Git comes with it's own version of `perl.exe`. If you have both Git and a separate perl installation in your PATH, please make sure that you separate Perl install's `bin` folder comes before the git's `bin` folder in your PATH.
+You must have Perl, Python, Ruby, and Git on `PATH`. Also, note that Git comes with it's own version of `perl.exe`. If you have both Git and a separate perl installation in your PATH, please make sure that you separate Perl install's `bin` folder comes before the git's `bin` folder in your PATH.
 
-Please also add the folder <phantomjs_path>\src\qt\3rdparty\gnuwin32\bin to your PATH, as required tools such as bison, flex, and gperf will not be found otherwise. Ex: ```SET PATH=%CD%\src\qt\3rdparty\gnuwin32\bin;%PATH%```
+Please also add the folder `<phantomjs_path>\src\qt\3rdparty\gnuwin32\bin` to your `PATH`, as required tools such as `bison`, `flex`, and `gperf` will not be found otherwise.
+Example:
+
+```
+SET PATH=%CD%\src\qt\3rdparty\gnuwin32\bin;%PATH%
+```
 
 Run the build script from Visual Studio Command Prompt.
 
@@ -71,6 +76,7 @@ git checkout 2.1.1
 git submodule init
 git submodule update
 ```
+
 ## Compile and Link
 
 From the code checkout:
