Add Test Anywhere Organization

--- a/_posts/documentation/explore/2000-01-06-users.md
+++ b/_posts/documentation/explore/2000-01-06-users.md
@@ -48,6 +48,7 @@ The following open-source projects are using PhantomJS as part of the testing wo
 * [Parse.ly](http://parse.ly) uses PhantomJS to generate weekly digest e-mails to writers and editors that include personalized analytics about their content; built with d3.js, Jinja2 and the PhantomJS ``render()`` function. (Source: [Whatever It Takes](http://blog.parsely.com/post/34241210620/whatever-it-takes).)
 * [Shopetti](https://www.shopetti.com) uses PhantomJS with Node.JS to generate price monitoring and sales alerts on different brands.
 * [Superius](http://www.superius.hr) uses PhantomJS for QUnit tests of their dynamically created mobile business web applications.
+* [Test Anywhere](https://testanywhere.co/) uses PhantomJS to deliver testing services to their customers.
 * [Thomson Reuters](http://thomsonreuters.com) uses PhantomJS to run QUnit and [legacy] JsUnit tests as an Ant target during CI builds (source: [email](https://groups.google.com/d/topic/phantomjs/tJhjQFZJAs4/discussion) from James Greene).
 * [Time Warner Cable](http://www.timewarnercable.com) uses PhantomJS with CoffeeScript + Jasmine for JavaScript build and JUnit XML for Jenkins continuous integration.
 * [Torbit](http://torbit.com) uses PhantomJS to analyze web pages in order to determine potential optimizations and various other tests.
