adjust the example page
reflect update on example phantomwebintro.js

--- a/_posts/documentation/explore/2000-01-01-examples.md
+++ b/_posts/documentation/explore/2000-01-01-examples.md
@@ -31,7 +31,7 @@ PhantomJS comes with a lot of [included examples](https://github.com/ariya/phant
 ## Page automation
 
 * [injectme.js](https://github.com/ariya/phantomjs/blob/master/examples/injectme.js) injects itself into a web page context
-* [phantomwebintro.js](https://github.com/ariya/phantomjs/blob/master/examples/phantomwebintro.js) uses jQuery to read #intro element text from phantomjs.org
+* [phantomwebintro.js](https://github.com/ariya/phantomjs/blob/master/examples/phantomwebintro.js) uses jQuery to read .version element text from phantomjs.org
 * [unrandomize.js](https://github.com/ariya/phantomjs/blob/master/examples/unrandomize.js) modifies a global object at page initialization
 * [waitfor.js](https://github.com/ariya/phantomjs/blob/master/examples/waitfor.js) waits until a test condition is true or a timeout occurs
 
